Fixing issue with graph on Safari and possible other browser's

--- a/css/worg.css
+++ b/css/worg.css
@@ -7,7 +7,6 @@
        width: 100px;
        height: 300px;
        background: blue;
-       display: flex;
     }
 
     html {
